force-app/main/default/objects/SFDC_Services_Project__c/fields/Bill_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill to Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SFDC Services Projects</relationshipLabel>
    <relationshipName>SFDC_Services_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>