force-app/main/default/objects/SFDC_Services_Project__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>blng__Invoice__c</referenceTo>
    <relationshipLabel>SFDC Services Projects</relationshipLabel>
    <relationshipName>SFDC_Services_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>