force-app/main/default/objects/SFDC_Services_Project__c/fields/Net_Total_from_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Net_Total_from_Invoices__c</fullName>
    <label>Net Total from Invoices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>