force-app/main/default/objects/SFDC_Services_Project__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>SFDC Services Projects</relationshipLabel>
    <relationshipName>SFDC_Services_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>