force-app/main/default/objects/SFDC_Services_Project__c/fields/Project_Anticipated_Handoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Anticipated_Handoff_Date__c</fullName>
    <label>Project Anticipated Handoff Date</label>
    <type>Date</type>
</CustomField>