force-app/main/default/objects/SFDC_Services_Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contract__c</columns>
    <columns>Hours_Worked_Total__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Percent_Complete__c</columns>
    <columns>Project_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>